# app/media.go
@@ -1,19 +1,15 @@
 package app
 
 import (
+	"fmt"
 	"github.com/webitel/storage/model"
 	"io"
 	"net/http"
 )
 
 func (app *App) SaveMediaFile(src io.Reader, mediaFile *model.MediaFile) (*model.MediaFile, *model.AppError) {
-
-	size, err := app.MediaFileStore.Write(src, mediaFile)
-	if err != nil {
-		return nil, err
-	}
-	mediaFile.Size = size
-	mediaFile.Instance = app.GetInstanceId()
+	var size int64
+	var err *model.AppError
 
 	if err = mediaFile.IsValid(); err != nil {
 		return nil, err
@@ -21,46 +17,57 @@ func (app *App) SaveMediaFile(src io.Reader, mediaFile *model.MediaFile) (*model
 
 	if !model.StringInSlice(mediaFile.MimeType, app.Config().MediaFileStoreSettings.AllowMime) {
 		return nil, model.NewAppError("app.SaveMediaFile", "model.media_file.mime_type.app_error", nil,
-			"Not allowed mime type", http.StatusBadRequest)
+			fmt.Sprintf("Not allowed mime type %s", mediaFile.MimeType), http.StatusBadRequest)
 	}
 
+	size, err = app.MediaFileStore.Write(src, mediaFile)
+	if err != nil {
+		return nil, err
+	}
+	mediaFile.Size = size
+	mediaFile.Instance = app.GetInstanceId()
+
 	if app.Config().MediaFileStoreSettings.MaxSizeByte != nil && *app.Config().MediaFileStoreSettings.MaxSizeByte < int(size) {
+		app.MediaFileStore.Remove(mediaFile) //fixme check error
 		return nil, model.NewAppError("app.SaveMediaFile", "model.media_file.size.app_error", nil,
 			"", http.StatusBadRequest)
 	}
 
-	if result := <-app.Store.MediaFile().Save(mediaFile); result.Err != nil {
-		if result.Err.Id != "store.sql_media_file.save.saving.duplicate" {
+	if mediaFile, err = app.Store.MediaFile().Create(mediaFile); err != nil {
+		if err.Id != "store.sql_media_file.save.saving.duplicate" {
 			app.MediaFileStore.Remove(mediaFile)
 		}
-		return nil, result.Err
+		return nil, err
 	} else {
-		return result.Data.(*model.MediaFile), nil
+		return mediaFile, nil
 	}
 }
 
-func (app *App) ListMediaFiles(domain string, page, perPage int) ([]*model.MediaFile, *model.AppError) {
-	if result := <-app.Store.MediaFile().GetAllByDomain(domain, page*perPage, perPage); result.Err != nil {
-		return nil, result.Err
-	} else {
-		return result.Data.([]*model.MediaFile), nil
-	}
+func (app *App) GetMediaFilePage(domainId int64, q string, page, perPage int) ([]*model.MediaFile, *model.AppError) {
+	r := model.ListRequest{}
+	r.SetPage(page).SetPerPage(perPage).SetQ(q)
+	return app.Store.MediaFile().GetAllPage(domainId, &r)
 }
 
-func (app *App) CountMediaFilesByDomain(domain string) (int64, *model.AppError) {
-	if result := <-app.Store.MediaFile().GetCountByDomain(domain); result.Err != nil {
-		return 0, result.Err
-	} else {
-		return result.Data.(int64), nil
-	}
+func (app *App) GetMediaFile(domainId int64, id int) (*model.MediaFile, *model.AppError) {
+	return app.Store.MediaFile().Get(domainId, id)
 }
 
-func (app *App) GetMediaFile(id int64, domain string) (*model.MediaFile, *model.AppError) {
-	if result := <-app.Store.MediaFile().Get(id, domain); result.Err != nil {
-		return nil, result.Err
-	} else {
-		return result.Data.(*model.MediaFile), nil
+func (app *App) DeleteMediaFile(domainId int64, id int) (*model.MediaFile, *model.AppError) {
+	file, err := app.Store.MediaFile().Get(domainId, id)
+	if err != nil {
+		return nil, err
 	}
+
+	if err = app.MediaFileStore.Remove(file); err != nil {
+		return nil, err
+	}
+
+	if err = app.Store.MediaFile().Delete(domainId, file.Id); err != nil {
+		return nil, err
+	}
+
+	return file, nil
 }
 
 func (app *App) GetMediaFileByName(name, domain string) (*model.MediaFile, *model.AppError) {
