# model/domain.go
@@ -2,7 +2,7 @@ package model
 
 type DomainRecord struct {
 	Id        int64  `json:"id" db:"id"`
-	DomainId  int64  `json:"domain_id" db:"domain_id"`
+	DomainId  int64  `json:"-" db:"domain_id"`
 	CreatedAt int64  `json:"created_at" db:"created_at"`
 	CreatedBy Lookup `json:"created_by" db:"created_by"`
 	UpdatedAt int64  `json:"updated_at" db:"updated_at"`
